--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "jasmine-node": "1.14.5",
     "jshint": "2.8.0",
     "mocha": "~2.1.0",
-    "phantomjs": "1.8.2-3",
+    "phantomjs-prebuilt": "2.1.16",
     "uglify-js": "2.4.23"
   },
   "scripts": {
