--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "devDependencies": {
     "docco": "0.8.0",
     "jasmine-node": "^3.0.0",
-    "jshint": "2.8.0",
+    "jshint": "^2.11.1",
     "phantomjs-prebuilt": "2.1.16",
     "uglify-js": "3.10.0"
   },
