--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "gex": "0.2.2",
-    "jsonic": "0.2.2",
+    "jsonic": "0.3.1",
     "lodash": "4.17.15"
   },
   "files": [
@@ -32,8 +32,8 @@
   ],
   "devDependencies": {
     "docco": "0.8.0",
-    "jasmine-node": "^3.0.0",
-    "jshint": "^2.11.1",
+    "jasmine-node": "3.0.0",
+    "jshint": "2.11.1",
     "phantomjs-prebuilt": "2.1.16",
     "uglify-js": "3.10.0"
   },
