repalaced phantomjs with karma and chromeheadless

--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "docco": "0.8.0",
     "jasmine": "^3.5.0",
     "jshint": "2.11.1",
-    "phantomjs-prebuilt": "2.1.16",
+    "karma": "^5.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-jasmine": "^3.3.1",
     "uglify-js": "3.10.0"
   },
   "scripts": {
@@ -43,8 +45,8 @@
     "build:lint": "jshint parambulator.js",
     "build:document": "docco parambulator.js -o doc",
     "build": "npm run build:minify; npm run build:lint; npm run build:document;",
-    "test:unit": "jasmine",
-    "test:end-2-end": "phantomjs test/run-jasmine.js test/jasmine.html",
+    "test:unit": "jasmine --config=jasmine.json",
+    "test:end-2-end": "karma start --single-run",
     "test": "npm run test:unit; npm run test:end-2-end;"
   }
 }
