--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [ master, release/*, chore/* ]
   pull_request:
-    branches: [ master , release/*]
+    branches: [ master , develop , release/*]
 
 jobs:
   build:
