--- a/.github/workflows/npm-audit.yml
+++ b/.github/workflows/npm-audit.yml
@@ -20,5 +20,5 @@ jobs:
           audit_level: moderate
           github_token: ${{ secrets.GITHUB_TOKEN }}
           # issue_assignees: oke-py // not needed
-          issue_labels: vulnerability,test
+          issue_labels: vulnerability, security
           dedupe_issues: true
