--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,9 +4,11 @@
 name: Node.js CI
 
 on:
-    branches: [ master, release/*, chore/* ]
   pull_request:
-    branches: [ master , develop , release/*]
+    branches:
+      - master
+      - develop
+      - 'release/*'
 
 jobs:
   build:
