--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "https://github.com/rjrodger/parambulator.git"
   },
   "dependencies": {
-    "gex": "1.0.0",
+    "gex": "git://github.com/i-Sight/gex.git#v1.0.1-isight",
     "jsonic": "0.3.1",
     "lodash": "4.17.15"
   },
